syntax = "proto3";

import "common.proto";

option java_package = "electionguard.protogen";
option java_outer_classname = "EncryptedTallyProto";

// Encrypted Tally of some collection of ballots.
message EncryptedTally {
  string tally_id = 1;
  repeated EncryptedTallyContest contests = 2;
}

message EncryptedTallyContest {
  string contest_id = 1; // matches ContestDescription.contest_id
  uint32 sequence_order = 2; // matches ContestDescription.sequence_order
  UInt256 contest_description_hash = 3; // matches ContestDescription.crypto_hash
  repeated EncryptedTallySelection selections = 4;
}

message EncryptedTallySelection {
  string selection_id = 1; // matches SelectionDescription.selection_id
  uint32 sequence_order = 2; // matches SelectionDescription.sequence_order
  UInt256 selection_description_hash = 3; // matches SelectionDescription.crypto_hash
  ElGamalCiphertext ciphertext = 4;  // accumulation over all the cast ballots for this selection
}
